--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,6 @@
-anyio==3.6.2
-click==8.1.3
-fastapi==0.88.0
-h11==0.14.0
-httptools==0.5.0
-idna==3.4
-pydantic==1.10.2
-python-dotenv==0.21.0
-PyYAML==6.0
-sniffio==1.3.0
-starlette==0.22.0
-typing_extensions==4.4.0
-uvicorn==0.20.0
-uvloop==0.17.0
-watchfiles==0.18.1
-websockets==10.4
+fastapi>=0.88.0,<0.89.0
+pydantic>=1.10.2,<2.0.0
+-e git+https://github.com/craigpastro/pyswip.git@3b4af74ee7bb674823ce638d723090d69f80e101#egg=pyswip
+pytest>=7.2.0,<7.3.0
+structlog>=22.3.0,<22.4.0
+uvicorn>=0.20.0,<0.21.0
