--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 fastapi>=0.88.0,<0.89.0
+httpx>=0.23.1,<0.24.0
 pydantic>=1.10.2,<2.0.0
 -e git+https://github.com/craigpastro/pyswip.git@3b4af74ee7bb674823ce638d723090d69f80e101#egg=pyswip
 pytest>=7.2.0,<7.3.0
