--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -11,6 +11,8 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version-file: "./go.mod"
+      - uses: bufbuild/buf-setup-action@v1
+      - uses: bufbuild/buf-lint-action@v1
       - uses: actions/cache@v3
         with:
           path: |
@@ -19,7 +21,6 @@ jobs:
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
-      - run: buf lint
       - run: make lint
 
   test:
@@ -29,6 +30,7 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version-file: "./go.mod"
+      - uses: bufbuild/buf-setup-action@v1
       - uses: actions/cache@v3
         with:
           path: |
