--- a/testdata/check.yaml
+++ b/testdata/check.yaml
@@ -1,5 +1,5 @@
 tests:
-  - name: This
+  - name: this
     schema:
       - namespace: document
         relation: viewer
@@ -23,7 +23,7 @@ tests:
           user: aardvark
         expectation: false
   
-  - name: ComputedUserset
+  - name: computedUserset
     schema:
       - namespace: document
         relation: writer
@@ -44,7 +44,7 @@ tests:
           user: aardvark
         expectation: true
 
-  - name: TupleToUserset
+  - name: tupleToUserset
     schema:
       - namespace: folder
         relation: viewer
@@ -71,3 +71,230 @@ tests:
           relation: viewer
           user: aardvark
         expectation: true
+
+  - name: thisAndUnion
+    schema:
+      - namespace: document
+        relation: writer
+        rewrite: self
+      - namespace: document
+        relation: viewer
+        rewrite: union(self, computedUserset(writer))
+    tuples:
+      - namespace: document
+        id: a1
+        relation: viewer
+        user: aardvark
+      - namespace: document
+        id: a2
+        relation: writer
+        user: badger
+    assertions:
+      - tuple:
+          namespace: document
+          id: a1
+          relation: viewer
+          user: aardvark
+        expectation: true
+      - tuple:
+          namespace: document
+          id: a2
+          relation: viewer
+          user: badger
+        expectation: true
+
+  - name: thisAndIntersection
+    schema:
+      - namespace: document
+        relation: writer
+        rewrite: self
+      - namespace: document
+        relation: viewer
+        rewrite: intersection(self, computedUserset(writer))
+    tuples:
+      - namespace: document
+        id: a1
+        relation: viewer
+        user: aardvark
+      - namespace: document
+        id: a1
+        relation: writer
+        user: aardvark
+      - namespace: document
+        id: a2
+        relation: viewer
+        user: badger
+      - namespace: document
+        id: a3
+        relation: writer
+        user: cheetah
+    assertions:
+      - tuple:
+          namespace: document
+          id: a1
+          relation: viewer
+          user: aardvark
+        expectation: true
+      - tuple:
+          namespace: document
+          id: a2
+          relation: viewer
+          user: badger
+        expectation: false
+      - tuple:
+          namespace: document
+          id: a3
+          relation: viewer
+          user: cheetah
+        expectation: false
+
+  - name: thisAndExclusionMinuend
+    schema:
+      - namespace: document
+        relation: banned
+        rewrite: self
+      - namespace: document
+        relation: viewer
+        rewrite: exclusion(self, computedUserset(banned))
+    tuples:
+      - namespace: document
+        id: a1
+        relation: viewer
+        user: aardvark
+      - namespace: document
+        id: a1
+        relation: banned
+        user: aardvark
+      - namespace: document
+        id: a2
+        relation: viewer
+        user: badger
+      - namespace: document
+        id: a3
+        relation: banned
+        user: cheetah
+    assertions:
+      - tuple:
+          namespace: document
+          id: a1
+          relation: viewer
+          user: aardvark
+        expectation: false
+      - tuple:
+          namespace: document
+          id: a2
+          relation: viewer
+          user: badger
+        expectation: true
+      - tuple:
+          namespace: document
+          id: a3
+          relation: viewer
+          user: cheetah
+        expectation: false
+
+  - name: ComputedUsersetAndComputedUserset
+    schema:
+      - namespace: document
+        relation: owner
+        rewrite: self
+      - namespace: document
+        relation: writer
+        rewrite: computedUserset(owner)
+      - namespace: document
+        relation: viewer
+        rewrite: computedUserset(writer)
+    tuples:
+      - namespace: document
+        id: a1
+        relation: owner
+        user: aardvark
+    assertions:
+      - tuple:
+          namespace: document
+          id: a1
+          relation: viewer
+          user: aardvark
+        expectation: true
+
+  - name: ComputedUsersetAndUnion
+    schema:
+      - namespace: document
+        relation: owner
+        rewrite: self
+      - namespace: document
+        relation: writer
+        rewrite: self
+      - namespace: document
+        relation: viewer
+        rewrite: union(computedUserset(writer), computedUserset(owner))
+    tuples:
+      - namespace: document
+        id: a1
+        relation: writer
+        user: aardvark
+      - namespace: document
+        id: a2
+        relation: owner
+        user: badger
+    assertions:
+      - tuple:
+          namespace: document
+          id: a1
+          relation: viewer
+          user: aardvark
+        expectation: true
+      - tuple:
+          namespace: document
+          id: a2
+          relation: viewer
+          user: badger
+        expectation: true
+
+  - name: ComputedUsersetAndIntersection
+    schema:
+      - namespace: document
+        relation: owner
+        rewrite: self
+      - namespace: document
+        relation: writer
+        rewrite: self
+      - namespace: document
+        relation: viewer
+        rewrite: intersection(computedUserset(writer), computedUserset(owner))
+    tuples:
+      - namespace: document
+        id: a1
+        relation: writer
+        user: aardvark
+      - namespace: document
+        id: a1
+        relation: owner
+        user: aardvark
+      - namespace: document
+        id: a2
+        relation: writer
+        user: badger
+      - namespace: document
+        id: a3
+        relation: owner
+        user: cheetah
+    assertions:
+      - tuple:
+          namespace: document
+          id: a1
+          relation: viewer
+          user: aardvark
+        expectation: true
+      - tuple:
+          namespace: document
+          id: a2
+          relation: viewer
+          user: badger
+        expectation: false
+      - tuple:
+          namespace: document
+          id: a3
+          relation: viewer
+          user: cheetah
+        expectation: false
