--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -7,14 +7,12 @@
       - buf.build/googleapis/googleapis
       - buf.build/envoyproxy/protoc-gen-validate
  plugins:
-  - remote: buf.build/protocolbuffers/plugins/go
+  - plugin: buf.build/protocolbuffers/go
     out: internal/gen
     opt: paths=source_relative
-  - remote: buf.build/bufbuild/plugins/connect-go
+  - plugin: buf.build/bufbuild/connect-go
     out: internal/gen
     opt: paths=source_relative
-  - remote: buf.build/jirkad/plugins/protoc-gen-validate:v0.6.7
+  - plugin: buf.build/bufbuild/validate-go
     out: internal/gen
-    opt:
-      - paths=source_relative
-      - lang=go
+    opt: paths=source_relative
